[project]
name = "temporallens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bertopic>=0.16.4",
    "faiss-cpu>=1.10.0",
    "flagembedding>=1.1.7",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.5",
    "langchain>=0.3.23",
    "matplotlib>=3.10.1",
    "more-itertools>=10.6.0",
    "networkx>=3.4.2",
    "nltk>=3.9.1",
    "numpy==1.26.4",
    "omnievent>=0.1.7",
    "optimum[onnxruntime]>=1.5.1",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pyarrow>=19.0.1",
    "pyvis>=0.3.2",
    "scikit-learn>=1.0.2",
    "seaborn>=0.13.2",
    "spacy>=3.8.5",
    "transformers>=4.21.2",
]
